# ai-novel-rewriter

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md  demo_assemble_test.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  restart.sh  start.sh  stop.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backend/: Dockerfile  Dockerfile.dev  README.md
backend/app/: main.py
backend/docs/: api-contract.md  rewrite_window_rollout_runbook.md  ws-protocol.md
backend/scripts/: diagnose_provider_connection.py  sync_openapi.py
backend/tests/: conftest.py  test_analyze_pipeline.py  test_anchor_strength.py  test_artifact_exports_api.py  test_assemble_pipeline.py  test_chapter_adjustments_regression.py  test_chapter_analysis_marks_api.py  test_chapter_rewrite_review_api.py  test_config_management.py  test_generation_params.py  test_i18n.py  test_llm_provider_client.py  test_llm_rate_limit.py  test_llm_retry.py  test_llm_validation.py  test_marking.py  test_novel_default_pipeline_status.py  test_novel_export_api.py  test_pipeline_e2e_api.py  test_prompt_audit_log.py  test_prompt_templates.py  test_provider_model_flow.py  test_quality_report_api.py  test_regex_safety.py  test_rewrite_micro_tune_lifecycle.py  test_rewrite_pipeline.py  test_rewrite_plan_models.py  test_round4_regression_smoke.py  (+12 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
openspec/: config.yaml
(+150 files in other folders)
