[project]
name = "ai-novel-backend"
version = "0.1.0"
description = "Backend skeleton for AI Novel"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "greenlet>=3.2.0",
  "aiosqlite>=0.20.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.20",
  "httpx>=0.27.0",
  "cryptography>=42.0.0",
  "tiktoken>=0.8.0",
  "jsonschema>=4.23.0",
  "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[project.scripts]
ai-novel-openapi = "backend.scripts.sync_openapi:main"

[tool.uv]
# Keep resolution deterministic for local-first development.
index-strategy = "first-index"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
